--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -44,15 +44,15 @@
         </record>
 
 
-        <record id="view_move_form_account_payment" model="ir.ui.view">
-            <field name="name">account.payment.form</field>
-            <field name="model">account.payment</field>
-            <field name="inherit_id" ref="account.view_account_payment_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//field[@name='partner_id']" position="attributes">
-                    <attribute name="options">{'no_quick_create':True,'no_create_edit':True,'no_open': True,}</attribute>
-                </xpath>
-            </field>
-        </record>
+<!--        <record id="view_move_form_account_payment" model="ir.ui.view">-->
+<!--            <field name="name">account.payment.form</field>-->
+<!--            <field name="model">account.payment</field>-->
+<!--            <field name="inherit_id" ref="account.view_account_payment_form"/>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <xpath expr="//field[@name='partner_id']" position="attributes">-->
+<!--                    <attribute name="options">{'no_quick_create':True,'no_create_edit':True,'no_open': True,}</attribute>-->
+<!--                </xpath>-->
+<!--            </field>-->
+<!--        </record>-->
     </data>
 </odoo>
