updated decmial places in MT fator and M2M added volume in PO list and SO list added set to draft for picking/stock move added recalculate value on stock valuations financial instruments added applicant name and changed the name.

--- a/kemexon_financial_instruments/views/bank_financing_limits_views.xml
+++ b/kemexon_financial_instruments/views/bank_financing_limits_views.xml
@@ -7,7 +7,8 @@
             <tree editable="bottom">
                 <field name="bank_id" invisible="1"/>
                 <field name="limit_name"/>
-                <field name="amount" sum="Total" widget="monetary"/>
+                <field name="amount" widget="monetary"/>
+                <field name="currency_id" invisible="1"/>
             </tree>
         </field>
     </record>
@@ -20,7 +21,8 @@
                     <group>
                         <field name="limit_name" invisible="1"/>
                         <field name="limit_name"/>
-                        <field name="amount" sum="Total" widget="monetary"/>
+                        <field name="amount" widget="monetary"/>
+                        <field name="currency_id" invisible="1"/>
                     </group>
                 </sheet>
             </form>
