fi lc module updates stock quant method update to effect all.

--- a/kemexon_financial_instruments/views/fi_lc_views.xml
+++ b/kemexon_financial_instruments/views/fi_lc_views.xml
@@ -4,7 +4,7 @@
         <field name="name">fi.lc.tree</field>
         <field name="model">fi.lc</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree default_order="id desc">
                 <field name="ref_no"/>
                 <field name="type"/>
                 <field name="lc_type"/>
