--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -165,24 +165,50 @@
                                     <span t-field="line.name" t-options="{'widget': 'text'}"/>
                                 </td>
                                 <td class="text-end">
-                                    <span t-field="line.quantity"/>
-                                    <span t-field="line.product_uom_id" groups="uom.group_uom"/>
+                                    <t t-if="line.product_id.name != 'Down payment'">
+                                        <span t-field="line.quantity"/>
+                                        <span t-field="line.product_uom_id" groups="uom.group_uom"/>
+                                    </t>
+                                    <t t-else="">
+                                        <span></span>
+                                    </t>
                                 </td>
                                 <t t-if="o.show_formula_pricing">
                                     <td class="text-end">
-                                        <span t-field="line.formula_price"/>
+                                        <t t-if="line.product_id.name != 'Down payment'">
+                                            <span t-field="line.formula_price"/>
+                                        </t>
+                                        <t t-else="">
+                                            <span></span>
+                                        </t>
+
                                     </td>
                                     <td class="text-end">
-                                        <span t-field="line.premium"/>
+                                        <t t-if="line.product_id.name != 'Down payment'">
+                                            <span t-field="line.premium"/>
+                                        </t>
+                                        <t t-else="">
+                                            <span></span>
+                                        </t>
                                     </td>
                                 </t>
 
                                 <td t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
-                                    <span class="text-nowrap" t-field="line.price_unit"/>
+                                    <t t-if="line.product_id.name != 'Down payment'">
+                                        <span class="text-nowrap" t-field="line.price_unit"/>
+                                    </t>
+                                    <t t-else="">
+                                        <span></span>
+                                    </t>
                                 </td>
                                 <td t-if="display_discount"
                                     t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
-                                    <span class="text-nowrap" t-field="line.discount"/>
+                                    <t t-if="line.product_id.name != 'Down payment'">
+                                        <span class="text-nowrap" t-field="line.discount"/>
+                                    </t>
+                                    <t t-else="">
+                                        <span></span>
+                                    </t>
                                 </td>
                                 <!--                                    <td t-attf-class="text-start {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">-->
                                 <!--                                        <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.tax_ids))"-->
@@ -393,7 +419,12 @@
                             <t t-if="o.tt_date">
                                 <div class="row">
                                     <div class="col-5">
-                                        <strong>Title Transfer Date</strong>
+                                        <t t-if="o.invoice_incoterm_id.name == 'ITT'">
+                                            <strong>ITT Date</strong>
+                                        </t>
+                                        <t t-else="">
+                                            <strong>Title Transfer Date</strong>
+                                        </t>
                                     </div>
                                     <br/>
                                     <!--                                    <div class="col-1"/>-->
