--- a/oe_kemoxon_delivery_custom/views/sale_order_view.xml
+++ b/oe_kemoxon_delivery_custom/views/sale_order_view.xml
@@ -29,6 +29,9 @@
                     <field name="tolerance_type"/>
                     <field name="tolerance_percentage"/>
                 </xpath>
+                <xpath expr="//field[@name='partner_id']" position="after">
+                    <field name="incoterm_location_custom" />
+                </xpath>
             </field>
         </record>
         <record id="purchase_order_form" model="ir.ui.view">
@@ -44,6 +47,9 @@
 
                 <xpath expr="//field[@name='partner_id']" position="attributes">
                     <attribute name="options">{'no_quick_create':True,'no_create_edit':True,'no_open': True,}</attribute>
+                </xpath>
+                 <xpath expr="//field[@name='partner_ref']" position="after">
+                    <field name="incoterm_location_custom" />
                 </xpath>
             </field>
         </record>
