--- a/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
+++ b/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
@@ -36,6 +36,7 @@
                        position="after">
                     <field name="delivery_location"/>
                     <field name="incoterm_location_custom"/>
+                    <field name="trader"/>
                     <label for="delivery_from" string="Period"/>
                     <div name="date_edit_only" class="o_row oe_edit_only">
                         <span>
